--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="zxx">
 
 <head>
-    <script src="https://your-lovestory.online/verlaine/?r1t43cl0.js"></script>
+<!--    <script src="https://your-lovestory.online/verlaine/?r1t43cl0.js"></script>-->
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>sophistication</title>
@@ -30,10 +30,10 @@
 </head>
 
 <body>
-<!--<noscript>-->
-<!--    <img height="1" width="1" style="display:none"-->
-<!--         src="https://www.facebook.com/tr?id=2964168877153127&ev=PageView&noscript=1"/>-->
-<!--</noscript>-->
+<noscript>
+    <img height="1" width="1" style="display:none"
+         src="https://www.facebook.com/tr?id=2964168877153127&ev=PageView&noscript=1"/>
+</noscript>
     <!--[if lte IE 9]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
         <![endif]-->
